tests/rosetta/transpiler/C/bitmap.error
compile failed: exit status 1: /tmp/ctranspile2428838675/bitmap.mochi.c: In function ‘_mem’:
/tmp/ctranspile2428838675/bitmap.mochi.c:83:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   83 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile2428838675/bitmap.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile2428838675/bitmap.mochi.c: At top level:
/tmp/ctranspile2428838675/bitmap.mochi.c:111:10: error: expected identifier or ‘(’ before ‘[’ token
  111 |     Pixel[] *px;
      |          ^
/tmp/ctranspile2428838675/bitmap.mochi.c: In function ‘NewBitmap’:
/tmp/ctranspile2428838675/bitmap.mochi.c:163:49: warning: passing argument 1 of ‘list_append_int_new’ from incompatible pointer type [-Wincompatible-pointer-types]
  163 |                         r = list_append_int_new(r, r_len, (Pixel){.R = 0LL, .G = 0LL, .B = 0LL});
      |                                                 ^
      |                                                 |
      |                                                 Pixel *
/tmp/ctranspile2428838675/bitmap.mochi.c:33:44: note: expected ‘const int *’ but argument is of type ‘Pixel *’
   33 | static int* list_append_int_new(const int *arr, size_t len, int val) {
      |                                 ~~~~~~~~~~~^~~
/tmp/ctranspile2428838675/bitmap.mochi.c:163:66: error: incompatible type for argument 3 of ‘list_append_int_new’
  163 |                         r = list_append_int_new(r, r_len, (Pixel){.R = 0LL, .G = 0LL, .B = 0LL});
      |                                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                                                  |
      |                                                                  Pixel
/tmp/ctranspile2428838675/bitmap.mochi.c:33:65: note: expected ‘int’ but argument is of type ‘Pixel’
   33 | static int* list_append_int_new(const int *arr, size_t len, int val) {
      |                                                             ~~~~^~~
/tmp/ctranspile2428838675/bitmap.mochi.c:166:35: warning: passing argument 1 of ‘list_append_strptr’ from incompatible pointer type [-Wincompatible-pointer-types]
  166 |         data = list_append_strptr(data, &data_len, r);
      |                                   ^~~~
      |                                   |
      |                                   Pixel **
/tmp/ctranspile2428838675/bitmap.mochi.c:47:55: note: expected ‘const char ***’ but argument is of type ‘Pixel **’
   47 | static const char*** list_append_strptr(const char ***arr, size_t *len, const char **val) {
      |                                         ~~~~~~~~~~~~~~^~~
/tmp/ctranspile2428838675/bitmap.mochi.c:166:52: warning: passing argument 3 of ‘list_append_strptr’ from incompatible pointer type [-Wincompatible-pointer-types]
  166 |         data = list_append_strptr(data, &data_len, r);
      |                                                    ^
      |                                                    |
      |                                                    Pixel *
/tmp/ctranspile2428838675/bitmap.mochi.c:47:86: note: expected ‘const char **’ but argument is of type ‘Pixel *’
   47 | static const char*** list_append_strptr(const char ***arr, size_t *len, const char **val) {
      |                                                                         ~~~~~~~~~~~~~^~~
/tmp/ctranspile2428838675/bitmap.mochi.c:166:14: warning: assignment to ‘Pixel **’ from incompatible pointer type ‘const char ***’ [-Wincompatible-pointer-types]
  166 |         data = list_append_strptr(data, &data_len, r);
      |              ^
/tmp/ctranspile2428838675/bitmap.mochi.c:170:44: error: ‘Bitmap’ has no member named ‘px’
  170 |     return (Bitmap){.cols = x, .rows = y, .px = data, .px_len = data_len};
      |                                            ^~
/tmp/ctranspile2428838675/bitmap.mochi.c:170:49: warning: initialization of ‘long unsigned int’ from ‘Pixel **’ makes integer from pointer without a cast [-Wint-conversion]
  170 |     return (Bitmap){.cols = x, .rows = y, .px = data, .px_len = data_len};
      |                                                 ^~~~
/tmp/ctranspile2428838675/bitmap.mochi.c:170:49: note: (near initialization for ‘(anonymous).px_len’)
/tmp/ctranspile2428838675/bitmap.mochi.c: In function ‘Fill’:
/tmp/ctranspile2428838675/bitmap.mochi.c:182:27: error: ‘Bitmap’ has no member named ‘px’
  182 |             Pixel **px = b.px;
      |                           ^
/tmp/ctranspile2428838675/bitmap.mochi.c:184:33: error: ‘Bitmap’ has no member named ‘px_lens’; did you mean ‘px_len’?
  184 |             size_t *px_lens = b.px_lens;
      |                                 ^~~~~~~
      |                                 px_len
/tmp/ctranspile2428838675/bitmap.mochi.c:190:14: error: ‘Bitmap’ has no member named ‘px’
  190 |             b.px = px;
      |              ^
/tmp/ctranspile2428838675/bitmap.mochi.c: In function ‘SetPx’:
/tmp/ctranspile2428838675/bitmap.mochi.c:205:19: error: ‘Bitmap’ has no member named ‘px’
  205 |     Pixel **px = b.px;
      |                   ^
/tmp/ctranspile2428838675/bitmap.mochi.c:207:25: error: ‘Bitmap’ has no member named ‘px_lens’; did you mean ‘px_len’?
  207 |     size_t *px_lens = b.px_lens;
      |                         ^~~~~~~
      |                         px_len
/tmp/ctranspile2428838675/bitmap.mochi.c:213:6: error: ‘Bitmap’ has no member named ‘px’
  213 |     b.px = px;
      |      ^
/tmp/ctranspile2428838675/bitmap.mochi.c: In function ‘GetPx’:
/tmp/ctranspile2428838675/bitmap.mochi.c:225:19: error: ‘Bitmap’ has no member named ‘px’
  225 |     Pixel *row = b.px[(int)(y)];
      |                   ^
/tmp/ctranspile2428838675/bitmap.mochi.c:227:12: error: incompatible types when returning type ‘Anon3’ but ‘Anon2’ was expected
  227 |     return (Anon3){.ok = 1LL, .pixel = row[(int)(x)]};
      |            ^
/tmp/ctranspile2428838675/bitmap.mochi.c: In function ‘GetPxRgb’:
/tmp/ctranspile2428838675/bitmap.mochi.c:235:52: error: ‘Anon2’ has no member named ‘pixel’
  235 |     return (Anon4){.ok = 1LL, .rgb = rgbFromPixel(r.pixel)};
      |                                                    ^
/tmp/ctranspile2428838675/bitmap.mochi.c: In function ‘user_main’:
/tmp/ctranspile2428838675/bitmap.mochi.c:259:58: error: ‘Anon2’ has no member named ‘pixel’
  259 |         puts(str_concat("Pixel at (0,0) is ", pixelStr(c1.pixel)));
      |                                                          ^
/tmp/ctranspile2428838675/bitmap.mochi.c:262:60: error: ‘Anon2’ has no member named ‘pixel’
  262 |         puts(str_concat("Pixel at (10,20) is ", pixelStr(c2.pixel)));
      |                                                            ^
/tmp/ctranspile2428838675/bitmap.mochi.c:265:19: error: ‘Anon2’ has no member named ‘pixel’
  265 |         int p = c3.pixel;
      |                   ^
/tmp/ctranspile2428838675/bitmap.mochi.c:266:20: error: request for member ‘R’ in something not a structure or union
  266 |         int r16 = p.R * 257LL;
      |                    ^
/tmp/ctranspile2428838675/bitmap.mochi.c:267:20: error: request for member ‘G’ in something not a structure or union
  267 |         int g16 = p.G * 257LL;
      |                    ^
/tmp/ctranspile2428838675/bitmap.mochi.c:268:20: error: request for member ‘B’ in something not a structure or union
  268 |         int b16 = p.B * 257LL;
      |                    ^

